--- a/index copy.html
+++ b/index copy.html
@@ -9,124 +9,176 @@
   </style>
 </head>
 <body>
-  <script type="module">
+<script type="module">
+  import * as THREE from 'https://esm.sh/three@0.160.1';
+  import { OrbitControls } from 'https://esm.sh/three@0.160.1/examples/jsm/controls/OrbitControls.js';
+  import { GLTFLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
+  import { DRACOLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/DRACOLoader.js';
+  import * as dat from 'https://cdn.jsdelivr.net/npm/dat.gui@0.7.9/build/dat.gui.module.js';
+  import { EffectComposer } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/EffectComposer.js';
+  import { RenderPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/RenderPass.js';
+  import { UnrealBloomPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/UnrealBloomPass.js';
+  import { SSAOPass } from 'https://esm.sh/three@0.160.1/examples/jsm/postprocessing/SSAOPass.js';
 
-    import * as THREE from 'https://esm.sh/three@0.160.1';
-    import { OrbitControls } from 'https://esm.sh/three@0.160.1/examples/jsm/controls/OrbitControls.js';
-    import { GLTFLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/GLTFLoader.js';
-    import { DRACOLoader } from 'https://esm.sh/three@0.160.1/examples/jsm/loaders/DRACOLoader.js';
+  const scene = new THREE.Scene();
+  scene.background = new THREE.Color(0xdddddd);
 
-    // Scene
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0xdddddd);
+  const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+  camera.position.set(6, 4, 10);
 
-    // Camera
-    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(6, 4, 10);
+  const renderer = new THREE.WebGLRenderer({ antialias: true });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.shadowMap.enabled = true;
+  renderer.shadowMap.type = THREE.VSMShadowMap;
+  renderer.outputEncoding = THREE.sRGBEncoding;
+  document.body.appendChild(renderer.domElement);
 
-    // Renderer
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.shadowMap.enabled = true;
-    //renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-    //renderer.shadowMap.type = THREE.PCFShadowMap;
-    //renderer.shadowMap.type = THREE.BasicShadowMap;
-    renderer.shadowMap.type = THREE.VSMShadowMap;
-    renderer.outputEncoding = THREE.sRGBEncoding; 
-    document.body.appendChild(renderer.domElement);
+  const composer = new EffectComposer(renderer);
+  composer.addPass(new RenderPass(scene, camera));
 
-    // Controls
-    const controls = new OrbitControls(camera, renderer.domElement);
-    controls.target.set(0, 4, -5);
-    controls.enableDamping = true;
-    controls.minDistance = 5;
-    controls.maxDistance = 30;
-    controls.minAzimuthAngle = -Math.PI / 12;
-    controls.maxAzimuthAngle = Math.PI / 2;
-    controls.minPolarAngle = Math.PI / 2.5;
-    controls.maxPolarAngle = Math.PI / 1.75;
-    controls.update();
+  const ssaoPass = new SSAOPass(scene, camera, window.innerWidth, window.innerHeight);
+  ssaoPass.kernelRadius = 0;
+  ssaoPass.minDistance = 0.001;
+  ssaoPass.maxDistance = 0.1;
+  composer.addPass(ssaoPass);
 
-    // Lights
-    const ambient = new THREE.HemisphereLight(0xffffff, 0x444444, 0.4);
-    ambient.position.set(0, 20, 0);
-    scene.add(ambient);
+  const bloomPass = new UnrealBloomPass(
+    new THREE.Vector2(window.innerWidth, window.innerHeight),
+    0.1, 0.4, 0.85
+  );
+  composer.addPass(bloomPass);
 
-    const directionalLight = new THREE.DirectionalLight(0xffffff, 2.5); // reduced intensity
-    directionalLight.position.set(5, 10, 7.5);
-    directionalLight.castShadow = true;
+  const controls = new OrbitControls(camera, renderer.domElement);
+  controls.target.set(0, 4, -5);
+  controls.enableDamping = true;
+  controls.minDistance = 5;
+  controls.maxDistance = 30;
+  controls.minAzimuthAngle = -Math.PI / 12;
+  controls.maxAzimuthAngle = Math.PI / 2;
+  controls.minPolarAngle = Math.PI / 2.5;
+  controls.maxPolarAngle = Math.PI / 1.75;
+  controls.update();
 
-    // Optional fill light to soften shadows from other side
-    const fillLight = new THREE.DirectionalLight(0xffffff, 1.0);
-    fillLight.position.set(-5, 10, 7.5);
-    scene.add(fillLight);
+  const ambient = new THREE.HemisphereLight(0xffffff, 0x444444, 0.8);
+  ambient.position.set(0, 20, 0);
+  scene.add(ambient);
 
-    // Shadow settings
-    directionalLight.shadow.mapSize.width = 64;  // higher resolution
-    directionalLight.shadow.mapSize.height = 64;
-    directionalLight.shadow.bias = -0.0005;        // small bias to reduce shadow acne
-    directionalLight.shadow.normalBias = 0.005;     // helps soften edge
+  const directionalLight = new THREE.DirectionalLight(0xffffff, 2.5);
+  directionalLight.position.set(5, 10, 7.5);
+  directionalLight.castShadow = true;
+  directionalLight.shadow.mapSize.set(1028, 1028);
+  directionalLight.shadow.bias = -0.0005;
+  directionalLight.shadow.normalBias = 0.005;
+  directionalLight.shadow.camera.near = 0.5;
+  directionalLight.shadow.camera.far = 50;
+  directionalLight.shadow.camera.left = -10;
+  directionalLight.shadow.camera.right = 10;
+  directionalLight.shadow.camera.top = 10;
+  directionalLight.shadow.camera.bottom = -10;
+  scene.add(directionalLight);
 
-    directionalLight.shadow.camera.near = 0.5;
-    directionalLight.shadow.camera.far = 50;
-    directionalLight.shadow.camera.left = -10;
-    directionalLight.shadow.camera.right = 10;
-    directionalLight.shadow.camera.top = 10;
-    directionalLight.shadow.camera.bottom = -10;
-    scene.add(directionalLight);
+  const fillLight = new THREE.DirectionalLight(0xffffff, 1.0);
+  fillLight.position.set(-5, 10, 7.5);
+  scene.add(fillLight);
 
-    // Ground with softer shadow blending
-    const groundGeo = new THREE.PlaneGeometry(50, 50);
-    const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 }); // softer
-    const ground = new THREE.Mesh(groundGeo, groundMat);
-    ground.rotation.x = -Math.PI / 2;
-    ground.position.y = 0;
-    ground.receiveShadow = true;
-    scene.add(ground);
+  // Only Color Controls in GUI
+  const gui = new dat.GUI();
 
+  const groundGeo = new THREE.PlaneGeometry(50, 50);
+  const groundMat = new THREE.ShadowMaterial({ opacity: 0.07 });
+  const ground = new THREE.Mesh(groundGeo, groundMat);
+  ground.rotation.x = -Math.PI / 2;
+  ground.receiveShadow = true;
+  scene.add(ground);
 
-    // Draco Loader
-    const dracoLoader = new DRACOLoader();
-    dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/');
-    dracoLoader.setDecoderConfig({ type: 'js' });
+  const dracoLoader = new DRACOLoader();
+  dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/');
+  dracoLoader.setDecoderConfig({ type: 'js' });
 
-    // GLTF Loader with Draco
-    const loader = new GLTFLoader();
-    loader.setDRACOLoader(dracoLoader);
+  const loader = new GLTFLoader();
+  loader.setDRACOLoader(dracoLoader);
 
-    // Load model
-    loader.load('Shyam.glb', (gltf) => {
-      gltf.scene.traverse((node) => {
-        if (node.isMesh) {
-          node.castShadow = true;
-          node.receiveShadow = true;
+  loader.load('Shyam.glb', (gltf) => {
+  const colorFolder = gui.addFolder("Colors");
+  const materialTracker = {};
+  const originalColors = {};
 
-          // // Optional: brighten shadows slightly
-          // if (node.material && node.material.color) {
-          //   node.material.color.multiplyScalar(1.05);
-          // }
+  gltf.scene.traverse((node) => {
+    if (node.isMesh) {
+      node.castShadow = true;
+      node.receiveShadow = true;
+
+      const materials = Array.isArray(node.material) ? node.material : [node.material];
+
+      materials.forEach((mat) => {
+        if (!mat || !mat.name) return;
+
+        console.log("Found material:", mat.name); // Debugging
+
+        if ((mat.name === "Color1" || mat.name === "Color2" || mat.name === "DarkGrey") && !materialTracker[mat.name]) {
+          const originalColorHex = `#${mat.color.getHexString()}`;
+          originalColors[mat.name] = originalColorHex;
+
+          const colorObj = { color: originalColorHex };
+
+          colorFolder
+            .addColor(colorObj, 'color')
+            .name(mat.name)
+            .onChange((value) => {
+              mat.color.set(value);
+            });
+
+          // Store reference to allow resetting later
+          materialTracker[mat.name] = {
+            material: mat,
+            colorObj,
+          };
         }
       });
-      scene.add(gltf.scene);
-    }, undefined, (error) => {
-      console.error('Error loading model:', error);
-    });
-
-    // Animate
-    function animate() {
-      requestAnimationFrame(animate);
-      controls.update();
-      renderer.render(scene, camera);
     }
-    animate();
+  });
 
-    // Resize
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
+  // Reset Button
+  const resetColors = {
+    reset: () => {
+      for (const name in materialTracker) {
+        const { material, colorObj } = materialTracker[name];
+        const original = originalColors[name];
+        if (material && original) {
+          colorObj.color = original;
+          material.color.set(original);
+        }
+      }
 
-  </script>
+      // Force GUI to refresh
+      gui.updateDisplay();
+    }
+  };
+
+  colorFolder.add(resetColors, 'reset').name("↺ Reset Colors");
+  colorFolder.open();
+
+  scene.add(gltf.scene);
+}, undefined, (error) => {
+  console.error('Error loading model:', error);
+});
+
+
+
+  function animate() {
+    requestAnimationFrame(animate);
+    controls.update();
+    composer.render();
+  }
+
+  animate();
+
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    composer.setSize(window.innerWidth, window.innerHeight);
+  });
+</script>
 </body>
 </html>
