--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Three.js GLB Loader with Shadows + Draco</title>
+  <title>Three.js Responsive GLB Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
+    .dg.ac {
+      z-index: 10;
+      max-height: 90vh;
+      overflow: auto;
+    }
   </style>
 </head>
 <body>
@@ -27,6 +33,7 @@
   camera.position.set(6, 4, 10);
 
   const renderer = new THREE.WebGLRenderer({ antialias: true });
+  renderer.setPixelRatio(window.devicePixelRatio);
   renderer.setSize(window.innerWidth, window.innerHeight);
   renderer.shadowMap.enabled = true;
   renderer.shadowMap.type = THREE.VSMShadowMap;
@@ -81,7 +88,6 @@
   fillLight.position.set(-5, 10, 7.5);
   scene.add(fillLight);
 
-  // Only Color Controls in GUI
   const gui = new dat.GUI();
 
   const groundGeo = new THREE.PlaneGeometry(50, 50);
@@ -99,71 +105,58 @@
   loader.setDRACOLoader(dracoLoader);
 
   loader.load('Shyam.glb', (gltf) => {
-  const colorFolder = gui.addFolder("Colors");
-  const materialTracker = {};
-  const originalColors = {};
+    const colorFolder = gui.addFolder("Colors");
+    const materialTracker = {};
+    const originalColors = {};
 
-  gltf.scene.traverse((node) => {
-    if (node.isMesh) {
-      node.castShadow = true;
-      node.receiveShadow = true;
+    gltf.scene.traverse((node) => {
+      if (node.isMesh) {
+        node.castShadow = true;
+        node.receiveShadow = true;
 
-      const materials = Array.isArray(node.material) ? node.material : [node.material];
+        const materials = Array.isArray(node.material) ? node.material : [node.material];
 
-      materials.forEach((mat) => {
-        if (!mat || !mat.name) return;
+        materials.forEach((mat) => {
+          if (!mat || !mat.name) return;
+          if ((mat.name === "Color1" || mat.name === "Color2" || mat.name === "DarkGrey") && !materialTracker[mat.name]) {
+            const originalColorHex = `#${mat.color.getHexString()}`;
+            originalColors[mat.name] = originalColorHex;
+            const colorObj = { color: originalColorHex };
 
-        console.log("Found material:", mat.name); // Debugging
+            colorFolder
+              .addColor(colorObj, 'color')
+              .name(mat.name)
+              .onChange((value) => {
+                mat.color.set(value);
+              });
 
-        if ((mat.name === "Color1" || mat.name === "Color2" || mat.name === "DarkGrey") && !materialTracker[mat.name]) {
-          const originalColorHex = `#${mat.color.getHexString()}`;
-          originalColors[mat.name] = originalColorHex;
-
-          const colorObj = { color: originalColorHex };
-
-          colorFolder
-            .addColor(colorObj, 'color')
-            .name(mat.name)
-            .onChange((value) => {
-              mat.color.set(value);
-            });
-
-          // Store reference to allow resetting later
-          materialTracker[mat.name] = {
-            material: mat,
-            colorObj,
-          };
-        }
-      });
-    }
-  });
-
-  // Reset Button
-  const resetColors = {
-    reset: () => {
-      for (const name in materialTracker) {
-        const { material, colorObj } = materialTracker[name];
-        const original = originalColors[name];
-        if (material && original) {
-          colorObj.color = original;
-          material.color.set(original);
-        }
+            materialTracker[mat.name] = { material: mat, colorObj };
+          }
+        });
       }
+    });
 
-      // Force GUI to refresh
-      gui.updateDisplay();
-    }
-  };
+    const resetColors = {
+      reset: () => {
+        for (const name in materialTracker) {
+          const { material, colorObj } = materialTracker[name];
+          const original = originalColors[name];
+          if (material && original) {
+            colorObj.color = original;
+            material.color.set(original);
+          }
+        }
+        gui.updateDisplay();
+      }
+    };
 
-  colorFolder.add(resetColors, 'reset').name("↺ Reset Colors");
-  colorFolder.open();
+    colorFolder.add(resetColors, 'reset').name("↺ Reset Colors");
+    colorFolder.open();
 
-  scene.add(gltf.scene);
-}, undefined, (error) => {
-  console.error('Error loading model:', error);
-});
-
-
+    scene.add(gltf.scene);
+  }, undefined, (error) => {
+    console.error('Error loading model:', error);
+  });
 
   function animate() {
     requestAnimationFrame(animate);
@@ -179,6 +172,7 @@
     renderer.setSize(window.innerWidth, window.innerHeight);
     composer.setSize(window.innerWidth, window.innerHeight);
   });
+
 </script>
 </body>
 </html>
