--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     document.body.appendChild(renderer.domElement);
 
     // Postprocessing
-    const composer = new EffectComposer(renderer);
-    composer.addPass(new RenderPass(scene, camera));
-    composer.addPass(new SSAOPass(scene, camera, window.innerWidth, window.innerHeight));
-    composer.addPass(new UnrealBloomPass(new THREE.Vector2(window.innerWidth, window.innerHeight), 0.1, 0.4, 0.85));
+    // const composer = new EffectComposer(renderer);
+    // composer.addPass(new RenderPass(scene, camera));
+    // composer.addPass(new SSAOPass(scene, camera, window.innerWidth, window.innerHeight));
+    // composer.addPass(new UnrealBloomPass(new THREE.Vector2(window.innerWidth, window.innerHeight), 0.1, 0.4, 0.85));
 
     // Controls
     const controls = new OrbitControls(camera, renderer.domElement);
