--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
     directionalLight.shadow.mapSize.set(1028, 1028);
     directionalLight.shadow.bias = -0.0005;
     directionalLight.shadow.normalBias = 0.005;
+    directionalLight.shadow.camera.near = 0.5;
+    directionalLight.shadow.camera.far = 50;
+    directionalLight.shadow.camera.left = -10;
+    directionalLight.shadow.camera.right = 10;
+    directionalLight.shadow.camera.top = 10;
+    directionalLight.shadow.camera.bottom = -10;
     scene.add(directionalLight);
 
     const fillLight = new THREE.DirectionalLight(0xffffff, 1.0);
