--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
-      composer.setSize(window.innerWidth, window.innerHeight);
+      // composer.setSize(window.innerWidth, window.innerHeight);
     });
   </script>
 </body>
